frame/support/test/tests/pallet_ui/step_005.rs
#[frame_support::pallet]
mod pallet {
	#[pallet::config]
	trait Foo {}
}

fn main() {
}
